# log-normalizer

./: Cargo.toml  Dockerfile  flake.nix  module.nix  overlay.nix  package.nix  schema.sql  sqlx-data.json
.github/workflows/: docker.yml
.sqlx/: query-0000e8f1c60464bde61980810f4013b3ff71d318291de9d8cf595474f4ee8f32.json  query-253ca64f81921ad7351335d8b47967a4b6831b16d8128a11b40daa63b31f5a4c.json  query-25a688892917d80b8746d77ebbcdfb4652c7047d722c530b4560d6008cdd2b97.json  query-417cfaecb2cb45d16c9da2dc2f8e6d1a37280842a5fc9ffb85b5d1955a54670d.json  query-425af9e4b088335acabe4bf74c3b11c0cab5f033b57197c992533889a4d1300d.json  query-4dcd86f5ef23f46b5c6cd391522791a609e04e068009678ba95b81cb385b9e89.json  query-581b192c18e54b711d0e3b6d38490984c48320fe4607c7eacc7b9002daaf7771.json  query-7669da21c453d1d4e5d5e7aead5a0fbc4307aba66debd679159374c5647fd0fe.json  query-982bc615a035019855317b3b47a3ac10159d81318db323c2d076c9b4c04a4e02.json  query-c9f31bcb2cb8b76f7cd2e66284b70f79e462ac70f94cdab022bdce63929731b1.json  query-d4d72675d0a0792d14472c6bfc00454791dea1eae933818d168171f818bb7dc9.json  query-eab40a01c0df317cdfb97eb4f88884f6776897ec2c2ecb8cae05748c8d087711.json  query-f4daaeeaaf227491627c0bb54319a5f356028a591fdac2f41ba2dce1c5053d4a.json  query-f8be06a1f3b2b9755faf3ca32921528528240308ed036cd6cf320ca4d31438b9.json
src/: data.rs  database.rs  main.rs  normalized.rs  raw.rs
tests/data/: 1.json  114840.json  134389.json  2522305.json  3578739.json  3579548.json  550237.json
tests/data/snapshots/: log_normalizer__raw__tests__1.json.snap  log_normalizer__raw__tests__134389.json.snap  log_normalizer__raw__tests__2522305.json.snap  log_normalizer__raw__tests__3578739.json.snap  log_normalizer__raw__tests__3579548.json.snap  log_normalizer__raw__tests__550237.json.snap
