[package]
name = "log-analyser"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[[bin]]
name = "log-normalizer"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.6.0", default_features = false, features = ["macros", "postgres", "json", "chrono", "runtime-tokio-rustls", "offline"] }
dotenv = "0.15.0"
main_error = "0.1.2"
tokio = { version = "1.20.0", features = ["macros", "time"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
chrono = { version = "0.4.19", features = ["serde"] }
steamid-ng = "1.0.0"
test-case = "2.2.1"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
