[package]
name = "log-analyser"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[[bin]]
name = "log-normalizer"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.7.3", default_features = false, features = ["macros", "postgres", "json", "chrono", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
main_error = "0.1.2"
tokio = { version = "1.20.0", features = ["macros", "time", "rt-multi-thread"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_with = "3.6.1"
serde_json = "1.0.82"
chrono = { version = "0.4.19", features = ["serde"] }
steamid-ng = "1.0.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
anyhow = "1.0.79"

[dev-dependencies]
insta = { version = "1.34.0", features = ["ron"] }
test-case = "3.3.1"